--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,64 @@
-name: Run HackTricks
+name: Deploy HackTricks Book to GitHub Pages
 
 on:
-  push: # 仍然在推送时运行
+  push:
+    branches:
+      - main # 当 main 分支有推送时触发，您可以更改为您的主要分支
   workflow_dispatch: # 允许手动触发
+
+# 设置 GITHUB_TOKEN 的权限，以便部署到 GitHub Pages
+permissions:
+  contents: read # 需要读取仓库内容
+  pages: write   # 需要写入 GitHub Pages
+  id-token: write # 需要 OIDC token 进行身份验证
+
 jobs:
-  run_hacktricks:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    environment: # 指定部署环境 (可选，但推荐)
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }} # 输出部署后的 URL
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4 # 使用最新的 checkout action
+      - name: Checkout Repository
+        uses: actions/checkout@v4 # 检出您自己的仓库 (如果 mdBook 源文件在其中)
 
-      - name: Run HackTricks Script
+      - name: Clone HackTricks and Select Language
+        env:
+          # 您想要构建的语言版本，与您之前的脚本中的 LANG 变量对应
+          # "master" 代表英语, "zh" 代表中文, 等等.
+          BOOK_LANG: "zh" # <<-------------------- 在这里设置您想要的语言
         run: |
-          # Download latest version of hacktricks
-          git clone https://github.com/HackTricks-wiki/hacktricks
+          git clone https://github.com/HackTricks-wiki/hacktricks.git
+          cd hacktricks
+          echo "Checking out language: $BOOK_LANG"
+          git checkout $BOOK_LANG
+          git pull origin $BOOK_LANG # 确保获取最新的语言内容
+          echo "Current branch and commit after checkout:"
+          git branch
+          git log -1
+          cd .. # 返回工作区根目录
 
-          # Select the language you want to use
-          export LANG="zh" # Leave master for english
-          # "af" for Afrikaans
-          # "de" for German
-          # "el" for Greek
-          # "es" for Spanish
-          # "fr" for French
-          # "hi" for Hindi
-          # "it" for Italian
-          # "ja" for Japanese
-          # "ko" for Korean
-          # "pl" for Polish
-          # "pt" for Portuguese
-          # "sr" for Serbian
-          # "sw" for Swahili
-          # "tr" for Turkish
-          # "uk" for Ukrainian
-          # "zh" for Chinese
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@v1 # 一个流行的安装 mdBook 的 Action
+        with:
+          mdbook-version: 'latest' # 或者指定一个版本，例如 '0.4.36'
 
-          # Run the docker container indicating the path to the hacktricks folder
-          docker run -d --rm --platform linux/amd64 -p 3337:3000 --name hacktricks -v $(pwd)/hacktricks:/app ghcr.io/hacktricks-wiki/hacktricks-cloud/translator-image bash -c "cd /app && git config --global --add safe.directory /app && git checkout $LANG && git pull && MDBOOK_PREPROCESSOR__HACKTRICKS__ENV=dev mdbook serve --hostname 0.0.0.0"
+      - name: Build mdBook
+        run: |
+          echo "Building mdBook from directory: $(pwd)/hacktricks"
+          mdbook build ./hacktricks # 从 hacktricks 子目录构建
+                                     # mdBook 会在 hacktricks/book/ 目录中生成输出
 
-          # 添加一个小的延迟以确保容器有足够的时间启动（可选）
-          # echo "Waiting for HackTricks container to start..."
-          # sleep 30
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
 
-          # 您可以在此处添加其他步骤，例如检查容器是否正在运行或访问服务
-          # 例如： curl http://localhost:3337
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # 从 mdBook 构建输出的目录上传
+          path: './hacktricks/book' # <<---- 确保这个路径正确
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
